[package]
name = "tenor_v2rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenv = "0.15.0"
regex = "1.9.0"
json = "0.12.4"
reqwest = "0.11.24"
form_urlencoded = "1.2.1"

[features]
DEBUG = []
RELEASE = []